# stick-duel

./: .gitignore  LICENSE  README.md  pyproject.toml  run_game.py
.github/workflows/: ci.yml
src/stick_duel/: __init__.py  __main__.py  asset_loader.py  config.py  constants.py  game.py  main.py
src/stick_duel/combat/: attack_data.py  attacks.py  collision.py  damage.py
src/stick_duel/core/: scene.py  scene_manager.py  state.py  state_machine.py  timer.py
src/stick_duel/effects/: __init__.py  impact.py
src/stick_duel/entities/: animation.py  fighter.py  fighter_input.py  hitbox.py  physics.py  state_factory.py  stats.py
src/stick_duel/fighter_states/: base.py  dead.py  fall.py  hitstun.py  idle.py  jump.py  melee_active.py  melee_recovery.py  melee_startup.py  ranged_active.py  ranged_recovery.py  ranged_startup.py  respawn.py  run.py
src/stick_duel/scenes/: controls_scene.py  game_scene.py  menu_scene.py  player_setup_scene.py  victory_scene.py
src/stick_duel/ui/: button.py  hud.py  input_box.py  theme.py
src/stick_duel/utils/: math_utils.py  paths.py
tests/: test_collision.py  test_combat_structured.py  test_damage.py  test_fighter_logic.py  test_gameplay_combat_flow.py  test_gameplay_invariants.py  test_helpers.py  test_integration_headless.py  test_match_flow_integration.py  test_respawn_invulnerability.py  test_scene_flow.py  test_scene_transitions.py  test_state_machine_fighter.py
