[project]
name = "stick-duel"
version = "0.1.0"
description = "Local multiplayer fighting game built with Pygame"
authors = [{ name = "Mathieu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
