[project]
name = "stick-duel"
version = "0.1.0"
description = "Local 1v1 fighting game built with Pygame and structured with a modular architecture."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mathieu" }
]
license = { file = "LICENSE" }
dependencies = [
    "pygame>=2.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.scripts]
stick-duel = "stick_duel.main:run"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]